--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "./node_modules/@popperjs/core/dist/umd/popper.min.js"
             ]
           },
@@ -105,7 +105,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "./node_modules/@popperjs/core/dist/umd/popper.min.js"
             ]
           }
